fix warning errors

--- a/app/templates/candidates/usercandidates.html
+++ b/app/templates/candidates/usercandidates.html
@@ -180,11 +180,13 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_exchange">Exchange</label>
-                            <input required id="txt_exchange" name="txt_exchange" type="text" class="form-control" disabled>
+                            <input required id="txt_exchange" name="txt_exchange" type="text" class="form-control"
+                                   disabled>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_industry">Industry</label>
-                            <input required id="txt_industry" name="txt_industry" type="text" class="form-control" disabled>
+                            <input required id="txt_industry" name="txt_industry" type="text" class="form-control"
+                                   disabled>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_logo">Logo URL</label>
