--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -57,22 +57,22 @@
                     {% endif %}">FMP......
                     <span class="badge badge-pill badge-light">{{market_data.fmp_rating}}</span>
                 </button>
-                                    <button class="mb-2 mr-2 btn
+                <button class="mb-2 mr-2 btn
                     {% if market_data.under_priced_pnt>=user_settings.algo_min_underprice %}
                     btn-success
                     {% else %}
                     btn-warning
                     {% endif %}">Underpriced
-                        <span class="badge badge-pill badge-light">{{market_data.under_priced_pnt}}</span>
-                    </button>
+                    <span class="badge badge-pill badge-light">{{market_data.under_priced_pnt}}</span>
+                </button>
                 <button class="mb-2 mr-2 btn
                     {% if market_data.twelve_month_momentum>=user_settings.algo_min_momentum %}
                     btn-success
                     {% else %}
                     btn-warning
                     {% endif %}">12M Momentum (%)
-                        <span class="badge badge-pill badge-light">{{market_data.twelve_month_momentum*100}}</span>
-                    </button>
+                    <span class="badge badge-pill badge-light">{{market_data.twelve_month_momentum*100}}</span>
+                </button>
             </div>
             <div class="page-title-actions">
                 <div>
@@ -105,13 +105,13 @@
                 <script> var hist_fmp_score = {{ hist_fmp_score|tojson }}; </script>
                 <script> var hist_yahoo_rank = {{ hist_yahoo_rank|tojson }}; </script>
                 <script> var stock_invest_rank = {{ stock_invest_rank|tojson }}; </script>
-<!--                <input type="hidden" id="hist_dates" value="{{ hist_dates }}">-->
-<!--                <input type="hidden" id="hist_tr_ranks" value="{{ hist_tr_ranks }}">-->
-<!--                <input type="hidden" id="hist_fmp_score" value="{{ hist_fmp_score }}">-->
+                <!--                <input type="hidden" id="hist_dates" value="{{ hist_dates }}">-->
+                <!--                <input type="hidden" id="hist_tr_ranks" value="{{ hist_tr_ranks }}">-->
+                <!--                <input type="hidden" id="hist_fmp_score" value="{{ hist_fmp_score }}">-->
             </div>
         </div>
         <div class="row">
-        <canvas id="myChart" style="width:100%; height:400px;"></canvas>
+            <canvas id="myChart" style="width:100%; height:400px;"></canvas>
 
         </div>
         <div class="divider mt-0" style="margin-bottom: 30px;"></div>
@@ -157,8 +157,12 @@
                             <li class="list-group-item">Sector: {{candidate.sector}}</li>
                             <li class="list-group-item">Industry: {{candidate.industry}}</li>
                             <li class="list-group-item">Exchange: {{candidate.exchange}}</li>
-                            <li class="list-group-item">Av. daily drop: {{market_data.yahoo_avdropP|round(1, 'floor')}} %</li>
-                            <li class="list-group-item">Av. daily spread:{{market_data.yahoo_avdropP|round(1, 'floor')}} %</li>
+                            <li class="list-group-item">Av. daily drop: {{market_data.yahoo_avdropP|round(1, 'floor')}}
+                                %
+                            </li>
+                            <li class="list-group-item">Av. daily spread:{{market_data.yahoo_avdropP|round(1, 'floor')}}
+                                %
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -174,6 +178,8 @@
 <script src="https://code.highcharts.com/stock/modules/data.js"></script>
 <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js"
+        integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg=="
+        crossorigin="anonymous"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/ticker_info.js') }}"></script>
 {% endblock %}
