--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -22,23 +22,27 @@
 
 {% block content %}
 <div class="ui stackable centered grid container">
-    <div class="twelve wide column">
+    <div class="wide column">
         <h2 class="ui header">
             Admin Dashboard
         </h2>
-        <div class="ui two column stackable grid">
+        <div class="ui three column stackable grid">
             {{ dashboard_option('Registered Users', 'admin.registered_users',
             description='View and manage user accounts', icon='users icon') }}
             {{ dashboard_option('Pending Approval', 'admin.pending_approval',
             description='Admin approval for new user', icon='check circle icon') }}
-            {{ dashboard_option('Add New User', 'admin.new_user',
-            description='Create a new user account', icon='add user icon') }}
-            {{ dashboard_option('Invite New User', 'admin.invite_user',
-            description='Invites a new user to create their own account', icon='paper plane icon') }}
             {{ dashboard_option('Market Data', 'admin.market_data',
             description='Stored Market data') }}
+
+            {{ dashboard_option('Add New User', 'admin.new_user',
+            description='Create a new user account', icon='add user icon') }}
+            {{ dashboard_option('Users Monitor', 'admin.users_monitor',
+            description='Monitoring users data', icon='laptop icon') }}
             {{ dashboard_option('Client Commands', 'admin.clientcommands',
             description='Station commands') }}
+
+            {{ dashboard_option('Invite New User', 'admin.invite_user',
+            description='Invites a new user to create their own account', icon='paper plane icon') }}
 
         </div>
     </div>
