create user with default strategy settings

--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -77,6 +77,8 @@
 {% endblock %}
 
 {% block scripting %}
+
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/usersmonitor.js') }}"></script>
 <script type="text/javascript">
         $(document).ready(function () {
             $('#search-users').keyup(function () {
@@ -91,8 +93,7 @@
                     $('tr.hidden').removeClass('hidden').show();
                 }
             });
-
         });
-
 </script>
+
 {% endblock %}
