--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -35,7 +35,7 @@
                     <th>Market data status</th>
                     <th>Margin</th>
                     <th>SMA</th>
-                    <th>PNL</th>
+                    <th>PnL</th>
                     <th>NET</th>
                 </tr>
                 </thead>
@@ -63,9 +63,9 @@
                         <i class="check icon green"></i>
                         {%endif%}
                     </td>
-                    <td>{{ u["sma"] |round |int}}</td>
-                    <td>{{ u["pnl"] |round |int }}</td>
-                    <td>{{ u["net"] |round |int }}</td>
+                    <td>$ {{ u["sma"] |round |int}}</td>
+                    <td class="{{u['pnl_class']}}">$ {{ u["pnl"] |round |int }}</td>
+                    <td>$ {{ u["net"] |round |int }}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
@@ -77,6 +77,8 @@
 {% endblock %}
 
 {% block scripting %}
+
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/usersmonitor.js') }}"></script>
 <script type="text/javascript">
         $(document).ready(function () {
             $('#search-users').keyup(function () {
@@ -91,8 +93,7 @@
                     $('tr.hidden').removeClass('hidden').show();
                 }
             });
-
         });
-
 </script>
+
 {% endblock %}
