text for tooltip

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -64,7 +64,7 @@
                     <div class="mb-2 mr-2 badge badge-info">US market:  {{ trading_session_state }}</div>
                 </div>
                 <div>
-                    <div class="mb-2 mr-2 badge {{ bg_upd_color }}"  data-toggle="tooltip" data-placement="bottom" title="Last update market data">Upd:  {{ last_update_date }}</div>
+                    <div class="mb-2 mr-2 badge {{ bg_upd_color }}"  data-toggle="tooltip" data-placement="bottom" title="Market Data last update">Upd:  {{ last_update_date }}</div>
                 </div>
             </div>
         </div>
