--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -46,17 +46,18 @@
                             <div style="display: inline-flex;">
                                 <h5 style="font-size: medium;" class="card-title">Strategy </h5>
                             </div>
-                            <div style="display: inline-flex;" class="pl-5">
-                                <div role="group" class="btn-group btn-group-toggle form-group" data-toggle="buttons">
-                                    {% for s in strategies %}
-                                    <label class="btn btn-info {% if s.id == default_settings.strategy_id %} active {% endif %}">
-                                        <input onchange="window.location.href='{{ url_for( 'algotradersettings.usersettings',strategy_id = s.id) }}';" type="radio" name="options" id="options{{s.id}}" value="{{s.id}}" autocomplete="off">
-                                        {{s.strategy}}
-                                    </label>
-                                    {% endfor %}
-                                </div>
-                                <input type="hidden" name="strategy_id" id="strategy_id" value="{{default_settings.strategy_id}}">
-                            </div>
+<!--                            <div style="display: inline-flex;" class="pl-5">-->
+<!--                                <div role="group" class="btn-group btn-group-toggle form-group" data-toggle="buttons">-->
+<!--                                    {% for s in strategies %}-->
+<!--                                    <label class="strategy-btn btn btn-info {% if s.id == user_settings.strategy_id %} active {% endif %}">-->
+<!--&lt;!&ndash;                                        <input onchange="window.location.href='{{ url_for( 'algotradersettings.usersettings',strategy_id = s.id) }}';" type="radio" name="options" id="options{{s.id}}" value="{{s.id}}" autocomplete="off">&ndash;&gt;-->
+<!--                                        <input onchange="Test()" class="strategy-option" type="radio" name="options" id="options{{s.id}}" value="{{s.id}}" autocomplete="off">-->
+<!--                                        {{s.strategy}}-->
+<!--                                    </label>-->
+<!--                                    {% endfor %}-->
+<!--                                </div>-->
+<!--                                <input type="hidden" name="strategy_id" id="strategy_id" value="{{user_settings.strategy_id}}">-->
+<!--                            </div>-->
                         </div>
                         <div class="form-row">
                             <div class="col-md-6">
@@ -204,7 +205,7 @@
                                     <label for="algo_min_rank" class="">Min Tiprank</label>
 
                                     <input title="Minimal TipRank to transmit to station"
-                                           value="{{default_settings.algo_min_rank}}" name="algo_min_rank"
+                                           value="{{user_settings.algo_min_rank}}" name="algo_min_rank"
                                            id="algo_min_rank" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -227,7 +228,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_accepted_fmp_ratings" class="">Accepted FMP</label>
                                     <input title="Ratings to transmit to station. Coma separated"
-                                           value="{{default_settings.algo_accepted_fmp_ratings}}"
+                                           value="{{user_settings.algo_accepted_fmp_ratings}}"
                                            name="algo_accepted_fmp_ratings" id="algo_accepted_fmp_ratings" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -249,7 +250,7 @@
                             <div class="col-md-4">
                                 <div class="position-relative form-group">
                                     <label for="algo_accepted_fmp_ratings" class="">Maximal Yahoo rating</label>
-                                    <input title="Maximal accepted rating" value="{{default_settings.algo_max_yahoo_rank}}"
+                                    <input title="Maximal accepted rating" value="{{user_settings.algo_max_yahoo_rank}}"
                                            name="algo_max_yahoo_rank" id="algo_max_yahoo_rank" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -272,7 +273,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_min_stock_invest_rank" class="">Minimal Stock Invest rank</label>
                                     <input title="Minimal accepted rating"
-                                           value="{{default_settings.algo_min_stock_invest_rank}}"
+                                           value="{{user_settings.algo_min_stock_invest_rank}}"
                                            name="algo_min_stock_invest_rank" id="algo_min_stock_invest_rank" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -296,7 +297,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_min_underprice" class="">Minimal underprice level %</label>
                                     <input title="Minimal allowed underprice: use negative for overpriced"
-                                           value="{{default_settings.algo_min_underprice}}"
+                                           value="{{user_settings.algo_min_underprice}}"
                                            name="algo_min_underprice" id="algo_min_underprice" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -319,7 +320,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_min_momentum" class="">Minimal Momentum % </label>
                                     <input title="Minimal allowed Momentum use negative for descending graph"
-                                           value="{{default_settings.algo_min_momentum}}"
+                                           value="{{user_settings.algo_min_momentum}}"
                                            name="algo_min_momentum" id="algo_min_momentum" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -462,4 +463,14 @@
 {% endblock %}
 {% block scripting %}
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/settings.js') }}"></script>
+<!--<script type="text/javascript">-->
+<!--        $(document).ready(function () {-->
+<!--            function Test(){                -->
+<!--                alert('Radio Box has been changed!');-->
+<!--            });-->
+<!--              -->
+<!--        });-->
+
+<!--</script>-->
+
 {% endblock %}
