--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -42,22 +42,10 @@
                 <div class="main-card mb-3 card">
                     <div class="card-body">
                         <h2 style="font-size: large;" class="card-title">Trading settings </h2>
-                        <div class="page-title-wrapper">
-                            <div style="display: inline-flex;">
+                        <div class="page-title-wrapper mt-3">
+                            <div class="d-inline-flex">
                                 <h5 style="font-size: medium;" class="card-title">Strategy </h5>
                             </div>
-<!--                            <div style="display: inline-flex;" class="pl-5">-->
-<!--                                <div role="group" class="btn-group btn-group-toggle form-group" data-toggle="buttons">-->
-<!--                                    {% for s in strategies %}-->
-<!--                                    <label class="strategy-btn btn btn-info {% if s.id == user_settings.strategy_id %} active {% endif %}">-->
-<!--&lt;!&ndash;                                        <input onchange="window.location.href='{{ url_for( 'algotradersettings.usersettings',strategy_id = s.id) }}';" type="radio" name="options" id="options{{s.id}}" value="{{s.id}}" autocomplete="off">&ndash;&gt;-->
-<!--                                        <input onchange="Test()" class="strategy-option" type="radio" name="options" id="options{{s.id}}" value="{{s.id}}" autocomplete="off">-->
-<!--                                        {{s.strategy}}-->
-<!--                                    </label>-->
-<!--                                    {% endfor %}-->
-<!--                                </div>-->
-<!--                                <input type="hidden" name="strategy_id" id="strategy_id" value="{{user_settings.strategy_id}}">-->
-<!--                            </div>-->
                         </div>
                         <div class="form-row">
                             <div class="col-md-6">
@@ -134,7 +122,7 @@
 
 
                         </div>
-                        <div style="    margin-top: 8px" class="form-row">
+                        <div style="margin-top: 8px" class="form-row">
                             <div class="col-md-3">
                                 <div class="position-relative form-check">
                                     <input title="Close all positions on market fall signal of number of consequentive LOSS closes within a day"
@@ -158,12 +146,9 @@
                                            class="form-control">
                                 </div>
                             </div>
-
-
                         </div>
                         <div class="form-row">
-
-                            <div class="col-md-1">
+                            <div class="col-md-3">
                                 <div class="position-relative form-check">
                                     <input title="Sell if longer then configured perion and profit more than 2%"
                                            {%if user_settings.algo_apply_max_hold%}
@@ -185,19 +170,38 @@
                             </div>
                         </div>
 
-                        <h5 style="font-size: medium;" class="card-title">Filters </h5>
+                        <div class="page-title-wrapper mt-5">
+                            <div class="d-inline-flex">
+                                <h5 style="font-size: medium;" class="card-title">Filters </h5>
+                            </div>
+                            <div class="pl-5 d-inline-flex">
+                                <div role="group" class="btn-group btn-group-toggle form-group" data-toggle="buttons">
+                                    {% for s in strategies %}
+                                    <label class="strategy-btn btn btn-info {% if s.id == default_settings.strategy_id %} active {% endif %}">
+                                        <!--                                        <input onchange="window.location.href='{{ url_for( 'algotradersettings.usersettings',strategy_id = s.id) }}';" type="radio" name="options" id="options{{s.id}}" value="{{s.id}}" autocomplete="off">-->
+                                        <input onchange="Test(this)" class="strategy-option" type="radio" name="options"
+                                               id="options{{s.id}}" value="{{s.id}}" autocomplete="off">
+                                        {{s.strategy}}
+                                    </label>
+                                    {% endfor %}
+                                </div>
+                                <input type="hidden" name="strategy_id" id="strategy_id"
+                                       value="{{default_settings.strategy_id}}">
+                            </div>
+                        </div>
                         <div class="form-row">
 
 
                             <div class="col-md-1">
                                 <div class="position-relative form-check">
                                     <input title="Use minimal Rank or transmit All"
-                                           {%if user_settings.algo_apply_min_rank%}
+                                           {%if default_settings.algo_apply_min_rank%}
                                            checked
                                            {% endif %}
                                            name="algo_apply_min_rank" id="algo_apply_min_rank" type="checkbox"
                                            class="form-check-input">
-                                    <label for="algo_apply_min_rank" class="form-check-label strategy-change">Apply</label>
+                                    <label for="algo_apply_min_rank"
+                                           class="form-check-label strategy-change">Apply</label>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -205,7 +209,7 @@
                                     <label for="algo_min_rank" class="">Min Tiprank</label>
 
                                     <input title="Minimal TipRank to transmit to station"
-                                           value="{{user_settings.algo_min_rank}}" name="algo_min_rank"
+                                           value="{{default_settings.algo_min_rank}}" name="algo_min_rank"
                                            id="algo_min_rank" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -215,7 +219,7 @@
                             <div class="col-md-1">
                                 <div class="position-relative form-check">
                                     <input title="Use FMP Ratings or transmit all"
-                                           {%if user_settings.algo_apply_accepted_fmp_ratings%}
+                                           {%if default_settings.algo_apply_accepted_fmp_ratings%}
                                            checked
                                            {% endif %}
                                            name="algo_apply_accepted_fmp_ratings" id="algo_apply_accepted_fmp_ratings"
@@ -228,7 +232,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_accepted_fmp_ratings" class="">Accepted FMP</label>
                                     <input title="Ratings to transmit to station. Coma separated"
-                                           value="{{user_settings.algo_accepted_fmp_ratings}}"
+                                           value="{{default_settings.algo_accepted_fmp_ratings}}"
                                            name="algo_accepted_fmp_ratings" id="algo_accepted_fmp_ratings" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -238,7 +242,7 @@
                             <div class="col-md-1">
                                 <div class="position-relative form-check">
                                     <input title="Maximum Yahoo rank: 1-Strong buy, 2-Buy,3-Hold,4-Underperform, 5-Sell"
-                                           {%if user_settings.algo_apply_max_yahoo_rank%}
+                                           {%if default_settings.algo_apply_max_yahoo_rank%}
                                            checked
                                            {% endif %}
                                            name="algo_apply_max_yahoo_rank" id="algo_apply_max_yahoo_rank"
@@ -250,7 +254,8 @@
                             <div class="col-md-4">
                                 <div class="position-relative form-group">
                                     <label for="algo_accepted_fmp_ratings" class="">Maximal Yahoo rating</label>
-                                    <input title="Maximal accepted rating" value="{{user_settings.algo_max_yahoo_rank}}"
+                                    <input title="Maximal accepted rating"
+                                           value="{{default_settings.algo_max_yahoo_rank}}"
                                            name="algo_max_yahoo_rank" id="algo_max_yahoo_rank" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -260,7 +265,7 @@
                             <div class="col-md-1">
                                 <div class="position-relative form-check">
                                     <input title="Apply minimal Stock Invest Rank"
-                                           {%if user_settings.algo_apply_min_stock_invest_rank%}
+                                           {%if default_settings.algo_apply_min_stock_invest_rank%}
                                            checked
                                            {% endif %}
                                            name="algo_apply_min_stock_invest_rank" id="algo_apply_min_stock_invest_rank"
@@ -273,18 +278,17 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_min_stock_invest_rank" class="">Minimal Stock Invest rank</label>
                                     <input title="Minimal accepted rating"
-                                           value="{{user_settings.algo_min_stock_invest_rank}}"
+                                           value="{{default_settings.algo_min_stock_invest_rank}}"
                                            name="algo_min_stock_invest_rank" id="algo_min_stock_invest_rank" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
                         </div>
-
                         <div class="form-row">
 
                             <div class="col-md-1">
                                 <div class="position-relative form-check">
                                     <input title="Minimal Underprice- current price is lower than Yahoo analyst estimate in %"
-                                           {%if user_settings.algo_apply_min_underprice%}
+                                           {%if default_settings.algo_apply_min_underprice%}
                                            checked
                                            {% endif %}
                                            name="algo_apply_min_underprice" id="algo_apply_min_underprice"
@@ -297,7 +301,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_min_underprice" class="">Minimal underprice level %</label>
                                     <input title="Minimal allowed underprice: use negative for overpriced"
-                                           value="{{user_settings.algo_min_underprice}}"
+                                           value="{{default_settings.algo_min_underprice}}"
                                            name="algo_min_underprice" id="algo_min_underprice" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
@@ -307,7 +311,7 @@
                             <div class="col-md-1">
                                 <div class="position-relative form-check">
                                     <input title="Last 12 Month momentum: stock got more expensive than 1Y ago in %"
-                                           {%if user_settings.algo_apply_min_momentum%}
+                                           {%if default_settings.algo_apply_min_momentum%}
                                            checked
                                            {% endif %}
                                            name="algo_apply_min_momentum" id="algo_apply_min_momentum"
@@ -320,7 +324,7 @@
                                 <div class="position-relative form-group">
                                     <label for="algo_min_momentum" class="">Minimal Momentum % </label>
                                     <input title="Minimal allowed Momentum use negative for descending graph"
-                                           value="{{user_settings.algo_min_momentum}}"
+                                           value="{{default_settings.algo_min_momentum}}"
                                            name="algo_min_momentum" id="algo_min_momentum" type="text"
                                            class="form-control strategy-change"></div>
                             </div>
