--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -219,7 +219,7 @@
             </div>
         </div>
         {% endif %}
-        <div class="app-main__outer">
+        <div class="app-main__outer mt-5">
             {% macro render_flashes(class) %}
             {% with msgs = get_flashed_messages(category_filter=[class]) %}
             {% for msg in msgs %}
