mobile - admin tools

--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -13,6 +13,7 @@
                     <div class="page-title-subheading">All You need to Know to use the platform.
                     </div>
                 </div>
+                <div><a href="/station/downloadzip" download><i class="nav-link-icon fa fa-download pl-5"> </i>AlgoTrader Package</a></div>
             </div>
 
         </div>
