beta column added

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -257,6 +257,7 @@
                             <th class="text-center">FMP Rank</th>
                             <th class="text-center">Underprice(%)</th>
                             <th class="text-center">12M Momentum</th>
+                            <th class="text-center">Beta</th>
 
                         </tr>
                         </thead>
@@ -282,6 +283,7 @@
                             <td class="text-center">{{value['fmp_rating']}}</td>
                             <td class="text-center">{{value['under_priced_pnt']}}</td>
                             <td class="text-center">{{value['twelve_month_momentum']}}</td>
+                            <td class="text-center">{{value['beta']}}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
