'admin as' - not finished

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -108,7 +108,10 @@
                                 <li class="btn-group nav-item">
                                     <a href="/account/manage/info" class="nav-link">
                                         <i class="nav-link-icon fa fa-user-circle"></i>
-                                        {{current_user.first_name}} {{current_user.last_name}}
+                                        {% if current_user.admin_as %}
+                                        <span class="text-danger pr-2">Admin as </span>
+                                        {% endif %}
+                                         {{current_user.first_name}} {{current_user.last_name}}
                                     </a>
                                 </li>
                                 <li class="btn-group nav-item">
