--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -202,7 +202,7 @@
                         <li>
                             <a href="/userview/closedpositions">
                                 <i class="metismenu-icon pe-7s-wallet"></i>
-                                Closed Positions
+                                My Performance
                             </a>
                         </li>
                         <li>
